--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,10 +4,16 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="Hello World, FTPDemo"
-    />
+    <TextView 
+        android:text=""
+        android:id="@+id/ftp_string"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" 
+        />
+    <TextView
+        android:id="@+id/ftp_log"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        />
 </LinearLayout>
-
